--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-numpy==1.19.0
-numpy==1.17.2
-numpy==1.20.2
-numpy==1.21.3
-numpy==1.16.4
-numpy==1.16.5
-numpy==1.18.1
-numpy==1.18.5
-numpy==1.19.2
-numpy==1.21.2
+numpy==1.24.4
 PyQt5==5.15.11
-PyQt5_sip==12.16.1
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
